force-app/main/default/objects/Billings__c/fields/Project_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Link to Account in Salesforce</inlineHelpText>
    <label>Project Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Project Owner Account)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>