force-app/main/default/objects/Billings__c/fields/Project_Owner_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account_ID__c</fullName>
    <formula>Project_Owner_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Account ID</label>
    <type>Text</type>
</CustomField>