force-app/main/default/objects/Billings__c/fields/Project_Owner_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account_Owner__c</fullName>
    <description>Account Owner of Project Owner Account</description>
    <formula>Project_Owner_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Project_Owner_Account__r.Owner.LastName</formula>
    <inlineHelpText>Account Owner of Project Owner Account</inlineHelpText>
    <label>Project Owner Account Owner</label>
    <type>Text</type>
</CustomField>