force-app/main/default/objects/Billings__c/fields/Project_Owner_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Channel_Manager__c</fullName>
    <description>Channel Manager, from Salesforce Project Owner Account</description>
    <formula>Project_Owner_Account__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Project_Owner_Account__r.New_Channel_Manager__r.LastName</formula>
    <inlineHelpText>Channel Manager, from Salesforce Project Owner Account</inlineHelpText>
    <label>Project Owner Channel Manager</label>
    <type>Text</type>
</CustomField>