force-app/main/default/objects/Billings__c/fields/Project_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Country__c</fullName>
    <formula>Project_Owner_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Country</label>
    <type>Text</type>
</CustomField>