force-app/main/default/objects/Billings__c/fields/Project_Owner_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Partner_Account__c</fullName>
    <formula>Project_Owner_Account__r.Partner_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Owner&apos;s Partner Account name.</inlineHelpText>
    <label>Project Owner Partner Account</label>
    <type>Text</type>
</CustomField>