force-app/main/default/objects/Billings__c/fields/Project_Owner_SF_Acc_No__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_SF_Acc_No__c</fullName>
    <formula>Project_Owner_Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of &quot;Project Owner Account Number&quot; that allows filtering of orders (used in Custom Button &quot;Show Orders&quot; on Account level)</inlineHelpText>
    <label>Project Owner SF Acc No</label>
    <type>Text</type>
</CustomField>