force-app/main/default/objects/Billings__c/fields/Project_Owner_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_SF_Number__c</fullName>
    <inlineHelpText>(From Abacus) Account number of project owner.</inlineHelpText>
    <label>Project Owner SF Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>