force-app/main/default/objects/Billings__c/fields/Qty_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Delivered__c</fullName>
    <inlineHelpText>(From Abacus) Delivered quantity</inlineHelpText>
    <label>Qty Delivered</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>