force-app/main/default/objects/Billings__c/fields/Qty_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Qty_Invoiced__c</fullName>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Qty Invoiced</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>