force-app/main/default/objects/Billings__c/fields/RDR__c.field-meta.xml
<CustomField>
    <fullName>RDR__c</fullName>
    <description>Reqest Delivery Performance</description>
    <formula>if(  ISNULL(Request_Date__c), 1,
if (Delivery_Date__c  &lt;=  Request_Date__c , 1,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reqest Delivery Performance. 1 if delivery data &lt;= request date, else 0</inlineHelpText>
    <label>RDR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>