force-app/main/default/objects/Billings__c/fields/RDR_CHF__c.field-meta.xml
<CustomField>
    <fullName>RDR_CHF__c</fullName>
    <description>equal to RDR * Total Value CHF.</description>
    <formula>RDR__c *  Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted Request Delivery Reliability.
=&gt; if delivery happened no later than date requested, the field is equal to Total Value CHF. Else it is zero.</inlineHelpText>
    <label>RDR CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>