force-app/main/default/objects/Billings__c/fields/RDR_delay__c.field-meta.xml
<CustomField>
    <fullName>RDR_delay__c</fullName>
    <description>Displays the delay in days when the requested delivery day can not be confirmed</description>
    <formula>if(Delivery_Date__c   - Request_Date__c &lt; 0, 0, Delivery_Date__c   - Request_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the delay in days when the requested delivery day can not be confirmed</inlineHelpText>
    <label>RDR delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>