force-app/main/default/objects/Billings__c/fields/Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Amount__c</fullName>
    <inlineHelpText>(From Abacus) Rebate Amount Per unit</inlineHelpText>
    <label>Rebate Amount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>