force-app/main/default/objects/Billings__c/fields/Rebate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Percentage__c</fullName>
    <inlineHelpText>(From Abacus) Rebate Percentage</inlineHelpText>
    <label>Rebate Percentage</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>