force-app/main/default/objects/Billings__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>(From Abacus) Customer reference. Used to indicate shop orders</inlineHelpText>
    <label>Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>