force-app/main/default/objects/Billings__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>(From Abacus)</description>
    <inlineHelpText>(From Abacus) Region code</inlineHelpText>
    <label>Region Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>