force-app/main/default/objects/Billings__c/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <inlineHelpText>(From Abacus) Reporting area</inlineHelpText>
    <label>Reporting Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>