force-app/main/default/objects/Billings__c/fields/Reporting_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area_Code__c</fullName>
    <inlineHelpText>(From Abacus) Reporting area for the order</inlineHelpText>
    <label>Reporting Area Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>