force-app/main/default/objects/Billings__c/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <inlineHelpText>(From Abacus) Reporting region</inlineHelpText>
    <label>Reporting Region</label>
    <length>15</length>
    <type>Text</type>
</CustomField>