force-app/main/default/objects/Billings__c/fields/Reporting_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region_Code__c</fullName>
    <inlineHelpText>(From Abacus) Reporting region code</inlineHelpText>
    <label>Reporting Region Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>