force-app/main/default/objects/Billings__c/fields/Reporting_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Reporting_uB_Office__c</fullName>
    <formula>Case (Reporting_Area__c,
&quot;AU&quot;,&quot;Australia&quot;,
&quot;IN&quot;,&quot;India&quot;,
&quot;MY&quot;,&quot;Rest of APAC&quot;,
&quot;NZ&quot;,&quot;Australia&quot;,
&quot;PH&quot;,&quot;Rest of APAC&quot;,
&quot;SG&quot;,&quot;Rest of APAC&quot;,
&quot;TH&quot;,&quot;Rest of APAC&quot;,
&quot;VN&quot;,&quot;Rest of APAC&quot;,
&quot;JP&quot;,&quot;Japan&quot;,
&quot;CN&quot;,&quot;China&quot;,
&quot;HK&quot;,&quot;China&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,
&quot;KR&quot;,&quot;Korea&quot;,
&quot;Rest of APAC&quot;,&quot;Rest of APAC&quot;,

    Case(Reporting_Region__c ,
    &quot;EMEA&quot;,&quot;EMEA&quot;,
    &quot;AMERICAS&quot;, &quot;Americas&quot;,
    &quot;UBX Corporate&quot;)
)</formula>
    <inlineHelpText>uB Office for reporting, derived from Reporting Area.</inlineHelpText>
    <label>Reporting uB Office</label>
    <type>Text</type>
</CustomField>