force-app/main/default/objects/Billings__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>(From Abacus) Date of request delivery</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>