force-app/main/default/objects/Billings__c/fields/Request_Date_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_Not_Met__c</fullName>
    <inlineHelpText>(From Abacus) Reason why request date could not be confirmed by u-blox</inlineHelpText>
    <label>Request Date Not Met</label>
    <length>40</length>
    <type>Text</type>
</CustomField>