force-app/main/default/objects/Billings__c/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <inlineHelpText>(From Abacus) Account number of end customer.</inlineHelpText>
    <label>End Customer SF Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>