force-app/main/default/objects/Billings__c/fields/Shipment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Detail__c</fullName>
    <description>(From Abacus)</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Shipment Detail</label>
    <length>16288</length>
    <type>LongTextArea</type>
</CustomField>