force-app/main/default/objects/Billings__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <inlineHelpText>(From Abacus)
1: online shop order
0: else
Note: data imported from Jul 2012 onwards only.</inlineHelpText>
    <label>Shop</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>