force-app/main/default/objects/Billings__c/fields/Shop_initial_order__c.field-meta.xml
<CustomField>
    <fullName>Shop_initial_order__c</fullName>
    <description>Flag orders from a new account.</description>
    <formula>IF(( CreatedDate  - Account__r.CreatedDate  &lt;= 7)  &amp;&amp;  Shop__c  = 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Initial order from a new account. (1 if the Order created equal to or less than 7 days after the Account is created, else 0)</inlineHelpText>
    <label>Shop initial order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>