force-app/main/default/objects/Billings__c/fields/Thingstream_Id__c.field-meta.xml
<CustomField>
    <fullName>Thingstream_Id__c</fullName>
    <label>Thingstream Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>