force-app/main/default/objects/Billings__c/fields/TMT_Billing_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Billing_CHF__c</fullName>
    <formula>if( Invoice_Date__c  &gt;= (today()-365), Total_Value_CHF__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value CHF if invoice date within TMT period, 0 else</inlineHelpText>
    <label>TMT Billing CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>