force-app/main/default/objects/Billings__c/fields/TMT_Billing_CHF_Prev_Yr__c.field-meta.xml
<CustomField>
    <fullName>TMT_Billing_CHF_Prev_Yr__c</fullName>
    <formula>if( and(Invoice_Date__c &gt;= (today()-730), Invoice_Date__c &lt; (today()-365)), Total_Value_CHF__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value CHF if invoice date within TMT period of a year ago, 0 else</inlineHelpText>
    <label>TMT Billing CHF Prev Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>