force-app/main/default/objects/Billings__c/fields/TMT_Booking_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Booking_CHF__c</fullName>
    <formula>if(Order_Date__c  &gt;= (today()-365), Total_Value_CHF__c ,0)</formula>
    <inlineHelpText>Total Value CHF if order date within TMT period</inlineHelpText>
    <label>TMT Booking CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>