force-app/main/default/objects/Billings__c/fields/Total_COGS_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS_CHF__c</fullName>
    <description>In CHF to make sure the cost is captured with the actual exchange rate.</description>
    <inlineHelpText>Calculated based on the product information at the date of invoice. Combination of cost per product and cost as a percentage of the ASP. IPR cost is included.</inlineHelpText>
    <label>Total COGS CHF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>