force-app/main/default/objects/Billings__c/fields/Total_COGS_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS_USD__c</fullName>
    <formula>if( USDtoCHF__c = 0, 0,  Total_COGS_CHF__c / USDtoCHF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total COGS converted to USD</inlineHelpText>
    <label>Total COGS USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>