force-app/main/default/objects/Billings__c/fields/Total_COGS_wo_IPR_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_COGS_wo_IPR_USD__c</fullName>
    <formula>if ( USDtoCHF__c = 0, 0, (Total_COGS_CHF__c -  Total_IPR_Cost_CHF__c )/USDtoCHF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>COGS without IPR, in USD</inlineHelpText>
    <label>Total COGS wo IPR USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>