force-app/main/default/objects/Billings__c/fields/Total_Contribution_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_CHF__c</fullName>
    <formula>if ( Order_Status__c != &quot;Closed&quot;, 0, 
Total_Value_CHF__c - Total_COGS_CHF__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total contribution of this order.</inlineHelpText>
    <label>Total Contribution CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>