force-app/main/default/objects/Billings__c/fields/Total_Contribution_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_USD__c</fullName>
    <formula>if ( USDtoCHF__c = 0, 0,  Total_Contribution_CHF__c / USDtoCHF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contribution in USD, calculated with ex rate of the month.</inlineHelpText>
    <label>Total Contribution USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>