force-app/main/default/objects/Billings__c/fields/Total_Cost_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Abacus__c</fullName>
    <description>Cost CHF Abacus * Qty Invoiced</description>
    <formula>Cost_CHF_Abacus__c  *  Qty_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost CHF Abacus * Qty Invoiced</inlineHelpText>
    <label>Total Cost Abacus CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>