force-app/main/default/objects/Billings__c/fields/Total_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Value__c</fullName>
    <inlineHelpText>(From Abacus) Total Gross Value of order in local currency</inlineHelpText>
    <label>Total Gross Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>