force-app/main/default/objects/Billings__c/fields/Total_Gross_Value_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Value_CHF__c</fullName>
    <inlineHelpText>(From Abacus) Total Gross Value in CHF Currency</inlineHelpText>
    <label>Total Gross Value CHF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>