force-app/main/default/objects/Billings__c/fields/Total_in_USD_at_const_exch_rate__c.field-meta.xml
<CustomField>
    <fullName>Total_in_USD_at_const_exch_rate__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;EUR&quot;, $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;,  $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;CHF&quot;,  $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1.00) *  Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total in USD at const exch rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>