force-app/main/default/objects/Billings__c/fields/Total_IPR_Cost_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_IPR_Cost_CHF__c</fullName>
    <inlineHelpText>Part of total COGS that is related to IPR.</inlineHelpText>
    <label>Total IPR Cost CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>