force-app/main/default/objects/Billings__c/fields/Total_Value_CHF__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_CHF__c</fullName>
    <inlineHelpText>(From Abacus) Billing value in CHF. Imported from Abacus with correct exchange rate</inlineHelpText>
    <label>Total Value CHF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>