force-app/main/default/objects/Billings__c/fields/Total_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_USD__c</fullName>
    <formula>if ( USDtoCHF__c = 0, Total_Value_CHF__c /  $User.USDtoCHF__c ,  Total_Value_CHF__c / USDtoCHF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of order in USD, calculated with value in field USDtoCHF (ex rate of invoice date), if this field is empty then ex rate of the month is used</inlineHelpText>
    <label>Total Value USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>