force-app/main/default/objects/Billings__c/fields/Turn_Business__c.field-meta.xml
<CustomField>
    <fullName>Turn_Business__c</fullName>
    <description>Checks whether order and delivery are happening in the same month</description>
    <formula>AND(MONTH(Order_Date__c) = MONTH(Delivery_Date__c), YEAR(Order_Date__c) = YEAR(Delivery_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only used for reports: deliver the turn business ratio</inlineHelpText>
    <label>Turn Business</label>
    <type>Checkbox</type>
</CustomField>