force-app/main/default/objects/Billings__c/fields/Update_CS__c.field-meta.xml
<CustomField>
    <fullName>Update_CS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked, the Contribution Share for this order is looked up.</inlineHelpText>
    <label>Update CS</label>
    <type>Checkbox</type>
</CustomField>