force-app/main/default/objects/Billings__c/fields/USDtoCHF__c.field-meta.xml
<CustomField>
    <fullName>USDtoCHF__c</fullName>
    <inlineHelpText>Exchange rate USD to CHF at the date of invoicing</inlineHelpText>
    <label>USDtoCHF</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>