force-app/main/default/objects/Billings__c/fields/Use_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Use_Restriction__c</fullName>
    <inlineHelpText>(From Abacus) IPR classification as defined in Abacus</inlineHelpText>
    <label>Use Restriction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>