force-app/main/default/objects/Billings__c/fields/Weighted_Delay__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Delay__c</fullName>
    <formula>if (Delivery_Date__c  &lt;=  Confirm_Date__c, 0, ( Delivery_Date__c  -  Confirm_Date__c ) *  Total_Value_CHF__c)</formula>
    <inlineHelpText>Delay between delivery date and confirm date, multiplied by Total Value CHF</inlineHelpText>
    <label>Weighted Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>