force-app/main/default/objects/Billings__c/fields/Wrong_Account__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Account__c</fullName>
    <formula>if( or(Customer_No__c = value(Account__r.Customer_No__c),Account__r.Customer_No__c=&quot;&quot;), &quot;no&quot;, &quot;yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>yes if customer no not equal to Account.</inlineHelpText>
    <label>Wrong Account</label>
    <type>Text</type>
</CustomField>