force-app/main/default/objects/Billings__c/fields/YTD_Billing__c.field-meta.xml
<CustomField>
    <fullName>YTD_Billing__c</fullName>
    <formula>if( year(Invoice_Date__c)  = year(today()-4),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if invoice date in current year. 0 else</inlineHelpText>
    <label>YTD Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>