force-app/main/default/objects/Billings__c/fields/YTD_Booking__c.field-meta.xml
<CustomField>
    <fullName>YTD_Booking__c</fullName>
    <formula>if( year(Order_Date__c)  = year(today()-4),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if invoice date in current year. 0 else</inlineHelpText>
    <label>YTD Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>