force-app/main/default/objects/Billings__c/validationRules/Order_is_in_restricted_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_is_in_restricted_country</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Account__r.IsRestrictedCountry__c,End_Customer_Account__r.IsRestrictedCountry__c)</errorConditionFormula>
    <errorMessage>The submitted order can&apos;t be created as it is located in one of the restricted countries!</errorMessage>
</ValidationRule>