force-app/main/default/objects/Billings__c/listViews/Acceleration_fees_last_30d.listView-meta.xml
<ListView>
    <fullName>Acceleration_fees_last_30d</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Product__c</columns>
    <columns>Qty_Ordered__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Price_per_unit__c</columns>
    <columns>Total_Value__c</columns>
    <columns>End_Customer_Account__c</columns>
    <columns>Frame_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Accelerated</value>
    </filters>
    <filters>
        <field>Order_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Ignore,Position Replaced</value>
    </filters>
    <label>Acceleration fees last 30d</label>
    <sharedTo>
        <group>PS_SHO</group>
    </sharedTo>
</ListView>