force-app/main/default/objects/Billings__c/listViews/Billings_last_30_days.listView-meta.xml
<ListView>
    <fullName>Billings_last_30_days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Order_Handling_Region__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Qty_Invoiced__c</columns>
    <columns>Total_Value__c</columns>
    <columns>Direct_Order__c</columns>
    <columns>Product_Center__c</columns>
    <columns>Customer_Part_Number_formula__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Qty_Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Product_Center__c</field>
        <operation>contains</operation>
        <value>SHO</value>
    </filters>
    <label>Billings last 30 days</label>
</ListView>