force-app/main/default/objects/Billings__c/listViews/Bookings_current_month.listView-meta.xml
<ListView>
    <fullName>Bookings_current_month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Reporting_Region__c</columns>
    <columns>Product__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Qty_Ordered__c</columns>
    <columns>Price_per_unit__c</columns>
    <columns>Total_Value__c</columns>
    <columns>End_Customer__c</columns>
    <columns>End_Customer_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Open,Closed</value>
    </filters>
    <label>Bookings current month</label>
</ListView>